--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
-    <include src="./partials/card.html"></include>
+    <include src="./partials/modal.html"></include>
     </div>
   </body>
 </html>
