fixed search api

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,7 @@
   <body>
     <div class="container">
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/header.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/modal.html"></include>
+    <include src="./partials/main.html"></include>
     </div>
   </body>
 </html>
