--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container"></div>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/main.html"></include>
-    </div>
+   
+  
   </body>
 </html>
