--- a/src/index.html
+++ b/src/index.html
@@ -19,4 +19,12 @@
   </body>
 </html>
 
-
+<!-- <button class="prev-page"></button>
+<button class="first-page"></button>
+<button class="pagination__btn"></button>
+<button class="pagination__btn"></button>
+<button class="pagination__btn"></button>
+<button class="pagination__btn"></button>
+<button class="pagination__btn"></button>
+<button class="last-page"></button>
+<button class="next-page"></button> -->
